GNOME Bugzilla – Bug 772788
Can't install flatpakrepo
Last modified: 2016-10-12 10:16:00 UTC
gnome-software-3.22.0-1.fc25.x86_64 Trying to follow: https://github.com/TingPing/flatpak-packages/ without using the command-line, I downloaded: https://dl.tingping.se/flatpak/tingping.flatpakrepo locally I then right-clicked on the file, and selected "Software Install". Clicking the "Install" button on the page doesn't do anything (apart from throwing errors in the journal). Oct 12 05:06:58 classic gnome-software-service.desktop[6410]: 03:06:58:0718 Gs failed to call gs_plugin_app_install on flatpak-system: No url specified Oct 12 05:06:58 classic gnome-software-service.desktop[6410]: 03:06:58:0718 Gs not saving error for system/*/*/source/tingping/*: No url specified Oct 12 05:06:58 classic gnome-software-service.desktop[6410]: 03:06:58:0730 Gs unknown flatpak kind: (null) Oct 12 05:06:58 classic gnome-software-service.desktop[6410]: 03:06:58:0731 Gs failed to call gs_plugin_refine_app on flatpak-system: failed to get size: Error reading file '/var/lib/flatpak': Is a directory
commit 373236d2ad4e350baf758dc025b2f2c7f79779ee Author: Richard Hughes <richard@hughsie.com> Date: Wed Oct 12 11:12:35 2016 +0100 Support installing flatpakrepo files without optional fields Don't (mis)use the homepage property to store the flatpak URL. This worked for some files where Homepage=Url but not in the case where they differed or where the optional Homepage was missing. Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=772788