Support installing flatpakrepo files without optional fields

Don't (mis)use the homepage property to store the flatpak URL. This worked for
some files where Homepage=Url but not in the case where they differed or where
the optional Homepage was missing.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=772788